[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Game/GUI/TouchControls/JoyStick.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/TouchControls/JoyStickBtn.png" type="Texture" id=2]
[ext_resource path="res://Assets/Game/TouchControls/PlaceBomb.png" type="Texture" id=3]
[ext_resource path="res://Assets/Game/TouchControls/JoyStickBG.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game/TouchControls/ShootBaguette.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/TouchControls/PlaceBombPressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Game/TouchControls/ShootBaguettePressed.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Game/GUI/TouchControls/TouchScreen.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[node name="TouchScreen" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 192.0
margin_top = -384.0
margin_right = -192.0
margin_bottom = -192.0
alignment = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="."]
margin_right = 766.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoyStickBG" type="Sprite" parent="Control3"]
position = Vector2( 96, 96 )
scale = Vector2( 0.187, 0.187 )
texture = ExtResource( 4 )

[node name="JoyStickBtn" type="TouchScreenButton" parent="Control3/JoyStickBG"]
normal = ExtResource( 2 )
pressed = ExtResource( 2 )
shape = SubResource( 1 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 770.0
margin_right = 1536.0
margin_bottom = 192.0
size_flags_horizontal = 3
alignment = 2

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 310.0
margin_right = 502.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_vertical = 3

[node name="BtnPlaceBomb" type="TouchScreenButton" parent="HBoxContainer/Control2"]
scale = Vector2( 0.187, 0.187 )
normal = ExtResource( 3 )
pressed = ExtResource( 6 )

[node name="Control3" type="Control" parent="HBoxContainer"]
margin_left = 506.0
margin_right = 570.0
margin_bottom = 192.0
rect_min_size = Vector2( 64, 0 )

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 574.0
margin_right = 766.0
margin_bottom = 192.0
rect_min_size = Vector2( 192, 192 )
size_flags_vertical = 3

[node name="BtnShoot" type="TouchScreenButton" parent="HBoxContainer/Control"]
scale = Vector2( 0.187, 0.187 )
normal = ExtResource( 5 )
pressed = ExtResource( 7 )
